mysql_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    name: mysql
