ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: davo.local
    http:
     paths:
     - path: /wordpress
       pathType: Prefix
       backend:
          service:
            name: wordpress
            port:
              number: 8080
